--- a/src/components/Experience/ModalWindow/ModalInfo.css
+++ b/src/components/Experience/ModalWindow/ModalInfo.css
@@ -17,7 +17,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
-    z-index: 1000; /* Adjust the z-index to make sure it's on top */
   }
   
   
@@ -33,7 +32,6 @@
     width: 1200px;
     height: 800px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    overflow: 'hidden';
   }
   
   
@@ -49,11 +47,11 @@
   }
   
   
-.modal-pic-info img {
-    max-width: 100%; /* Ensure the image doesn't overflow its container */
-    width: 40%; /* Set width to 40% of the parent container */
-  }
+  .modal-pic-info img {
+    max-width: 100%;
   
+}
+
   
   
 .modal-info-wrap {
@@ -121,6 +119,17 @@
     }
 
     .info-mod{
-        font-size: 10px;
+        font-size: 11px;
+    }
+    .modal-info-wrap{
+      gap:0.3rem
+    }
+
+    .skills-info{
+      font-size: 13px;
+    }
+    
+    h5{
+      font-size: 13px;
     }
   } 
