--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,7 +11,7 @@ h1::before{
     background: #423a63;
     position:absolute;
     z-index: -1;
-    filter:blur(1500px);
+    filter:blur(119px);
     top: -3rem;
     left: -5rem;
 }
@@ -26,7 +26,7 @@ h1::before{
 
 
 .info-me{
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     padding: 1.3rem;
     background: rgba(148, 129, 216, 0.2);
     border-radius: 20px;
@@ -203,6 +203,6 @@ h1::before{
 
   .my-pic{
     margin-top: 18rem;
-    width: 0;
+    width: 100px;
   }
 }
